# themachinethatgoesping

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.MD  README-proj.md  README-project.md  README.md  README.rst  build-requirements.txt  conanfile.txt  count-lines.py  environment.yml  make_pch.sh  meson.build  meson_options.txt  pip-build.sh  pip_out.txt  pyproject.toml  pytest.ini  recipe.yaml  remove_docstrings.py  requirements.txt  reuse_example.txt  themachinethatgoesping.py
python/: __init__.py  fix_stubs.py  glob.py  glob_sources.py  make_pybind_doc.py  make_pybind_doc.xsh  make_stubs.py  make_stubs.sh  meson.build
python/stubs/: __init__.pyi
python/stubs/algorithms/: __init__.pyi
python/stubs/algorithms/backscattermodels/: __init__.pyi
python/stubs/algorithms_nanopy/: __init__.pyi  echogramprocessing.pyi  featuremapping.pyi
python/stubs/algorithms_nanopy/amplitudecorrection/: __init__.pyi  functions.pyi
python/stubs/algorithms_nanopy/geoprocessing/: __init__.pyi  backtracers.pyi  datastructures.pyi  functions.pyi  raytracers.pyi  raytracers2.pyi
python/stubs/algorithms_nanopy/gridding/: __init__.pyi  functions.pyi
python/stubs/algorithms_nanopy/imageprocessing/: __init__.pyi  functions.pyi
python/stubs/algorithms_nanopy/pointprocessing/: __init__.pyi  bubblestreams.pyi  functions.pyi
python/stubs/algorithms_nanopy/signalprocessing/: __init__.pyi  datastructures.pyi
python/stubs/echosounders/: __init__.pyi
python/stubs/echosounders/evaluate/: __init__.pyi  evaluate_ping_features.pyi
python/stubs/echosounders/index_functions/: __init__.pyi  index_file_functions.pyi
python/stubs/echosounders_nanopy/: __init__.pyi  filetemplates.pyi  gsf.pyi  pingtools.pyi
python/stubs/echosounders_nanopy/kmall/: __init__.pyi  datagrams.pyi  filedatacontainers.pyi  filedatainterfaces.pyi  filetypes.pyi
python/stubs/echosounders_nanopy/kongsbergall/: __init__.pyi  filedatacontainers.pyi  filedatainterfaces.pyi  filetypes.pyi
python/stubs/echosounders_nanopy/simradraw/: __init__.pyi  filedatacontainers.pyi  filedatainterfaces.pyi
python/stubs/gridding/: __init__.pyi  echogrid.pyi  forwardgridderlegacy.pyi  forwardgridderlegacynew.pyi
python/stubs/gridding/functions/: __init__.pyi  gridfunctions.pyi  helperfunctions.pyi
python/stubs/navigation/: __init__.pyi
python/stubs/navigation_nanopy/: __init__.pyi  datastructures.pyi  navtools.pyi  nmea_0183.pyi
python/stubs/pingprocessing/: __init__.pyi
python/stubs/pingprocessing/core/: __init__.pyi  asserts.pyi  helper.pyi  progress.pyi
python/stubs/pingprocessing/filter_pings/: __init__.pyi  by_region.pyi
python/stubs/pingprocessing/group_pings/: __init__.pyi
python/stubs/pingprocessing/overview/: __init__.pyi  cluster.pyi  nav_plot.pyi  overlap_filter.pyi  pingoverview.pyi  pingproxy.pyi
python/stubs/pingprocessing/split_pings/: __init__.pyi  by_distance.pyi  by_file.pyi  by_time.pyi
python/stubs/pingprocessing/testing/: __init__.pyi
python/stubs/pingprocessing/watercolumn/: __init__.pyi
python/stubs/pingprocessing/widgets/: __init__.pyi  combinedviewer_core.pyi  combinedviewer_jupyter.pyi  combinedviewer_qt.pyi  control_jupyter.pyi  control_qt.pyi  control_spec.pyi  echogramviewer_core.pyi  echogramviewer_jupyter.pyi  echogramviewer_pyqtgraph.pyi  echogramviewer_pyqtgraph2.pyi  echogramviewer_qt.pyi  mapviewer_core.pyi  mapviewer_jupyter.pyi  mapviewer_pyqtgraph.pyi  mapviewer_qt.pyi  pyqtgraph_helpers.pyi  tqdmwidget.pyi  videoframes.pyi  wciviewer.pyi  wciviewer_core.pyi  wciviewer_jupyter.pyi  wciviewer_pyqtgraph.pyi  wciviewer_pyqtgraph2.pyi  wciviewer_qt.pyi
python/stubs/pingprocessing_nanopy/: __init__.pyi
python/stubs/pingprocessing_nanopy/watercolumn/: __init__.pyi  image.pyi
python/stubs/scripts/: __init__.pyi  mbes.pyi  nearfield.pyi  oceanographic.pyi  plot_tools.pyi  sbes.pyi
python/stubs/themachinethatgoesping/: __init__.py  pingprocessing.py  pingprocessing_cppy.py
python/stubs/themachinethatgoesping-stubs/: __init__.pyi  setup.py
python/stubs/themachinethatgoesping-stubs/algorithms/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/echosounders/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/gridding/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/navigation/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/pingprocessing/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/tools/: __init__.pyi
python/stubs/themachinethatgoesping-stubs/tools_ext/: __init__.pyi
python/stubs/themachinethatgoesping/algorithms/: __init__.py  featuremapping.py
python/stubs/themachinethatgoesping/algorithms_nanopy/: __init__.py  featuremapping.py
python/stubs/themachinethatgoesping/echosounders/: __init__.py  filetemplates.py  index_functions.py  pingtools.py
python/stubs/themachinethatgoesping/echosounders_cppy/: __init__.py  filetemplates.py  gsf.py  pingtools.py
python/stubs/themachinethatgoesping/echosounders_nanopy/: __init__.py  filetemplates.py  gsf.py  pingtools.py
python/stubs/themachinethatgoesping/gridding/: __init__.py  echogrid.py  forwardgridder.py  forwardgridderlegacy.py  forwardgridderlegacynew.py
python/stubs/themachinethatgoesping/navigation/: __init__.py  datastructures.py  navtools.py  nmea_0183.py
python/stubs/themachinethatgoesping/scripts/: __init__.py  (+5 more)
python/stubs/tools/: __init__.pyi  timeconv.pyi
python/stubs/tools_nanopy/: __init__.pyi  classhelper.pyi  helper.pyi  math.pyi  progressbars.pyi  pyhelper.pyi  timeconv.pyi
python/stubs/widgets/: __init__.pyi  combinedviewer_jupyter.pyi  combinedviewer_qt.pyi  control_jupyter.pyi  control_qt.pyi  control_spec.pyi  echogramviewer.pyi  echogramviewer_core.pyi  echogramviewer_jupyter.pyi  echogramviewer_qt.pyi  mapviewer_core.pyi  mapviewer_jupyter.pyi  mapviewer_qt.pyi  pyqtgraph_helpers.pyi  wciviewer.pyi  wciviewer_core.pyi  wciviewer_jupyter.pyi  wciviewer_qt.pyi
python/themachinethatgoesping/: in.__init__.py  in.pydev_install.py
subprojects/packagefiles/xxhash_cpp/: fix_memset_warning.patch  meson.build
(+466 files in other folders)
