# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = [
    'meson-python >= 0.8',
    'meson >= 0.63',
    'pyproject-metadata',
    'ninja',
    'oldest-supported-numpy'
]
build-backend = 'mesonpy'
backend-path = ['./subprojects/meson-python']


[project]
name = 'themachinethatgoesping'
dynamic = [
  'version',
]
#version = '0.0.1'
description = 'Enable advanced processing for multibeam and singlebeam echosounder data.THIS PROJECT IS IN DEVELOPMENT. NO useful FUNCTIONALITY EXISTS SO FAR!'
readme = 'README-project.md'
license = { file = 'LICENSE' }
keyword = ['mbes', 'sbes', 'watercolumn','echosounder','quantification']
authors = [
    {name = 'Peter Urban', email = 'peter.urban@ugent.be'}]

classifiers = [
  'Development Status :: 1 - Planning',
  'Programming Language :: Python',
]

requires-python = '>=3.8'
dependencies = [
  'numba',
  #'ipympl',
  #'matplotlib', #implicit already in ipympl
  'numpy >=1.20',
  'tqdm'
]


[project.optional-dependencies]
test = [
  'jupyter'
]


[project.urls]
homepage      = 'https://github.com/themachinethatgoesping'
repository    = 'https://github.com/themachinethatgoesping'
documentation = 'https://themachinethatgoesping.readthedocs.io/en/latest/'
#changelog = 'https://constellations.example.com/orion/docs/changelog.html'


# -- cibuildwheel options ---
[tool.cibuildwheel]
#FUTURE: build against musllinux (there is currently no documentation on this image)
#FUTURE: build for pypy (is not yet supported by mesonpy)
# Skip pypy[pp*] and musllinux (for now)
skip = 'pp* *musllinux*'

# Run at least pytests
test-requires = 'pytest'
test-command  = 'cd {project} && pytest'

[tool.cibuildwheel.linux]
# Install build dependencies
before-all = './ci_scripts/docker-manylinux_x86_64/manylinux2014-install.sh'

[tool.cibuildwheel.macos]
before-all = 'brew install boost libomp'

#FUTURE: add windows build here as well


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "subprojects/tools/python/tests/",
    "subprojects/gridding/python/tests/",
    "subprojects/navigation/python/tests/",
    "subprojects/echosounders/python/tests/",
]
