# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = [
    'meson-python >= 0.15.0',
    'meson >= 1.2.3',
    'pyproject-metadata',
    'ninja >= 1.10', #1.12 fixes longpath issue on windows 
    'numpy >= 2.0',
    #'oldest-supported-numpy'
]
build-backend = 'mesonpy'
#backend-path = ['./subprojects/meson-python']

[project]
name = 'themachinethatgoesping'
dynamic = [
  'version',
]
#version = '0.0.1'
description = 'Enable advanced processing for multibeam and singlebeam echosounder data.THIS PROJECT IS IN DEVELOPMENT.'
readme = 'README-project.md'
license = { file = 'LICENSE' }
keyword = ['mbes', 'sbes', 'watercolumn','echosounder','quantification']
authors = [
    {name = 'Peter Urban', email = 'peter.urban@ugent.be'}]

classifiers = [
  'Development Status :: 1 - Planning',
  'Programming Language :: Python',
]

requires-python = '>=3.10, <3.13'
dependencies = [
  'numba',
  #'ipympl',
  'matplotlib',
  'numpy >= 1.26.0',
  'tqdm',
  'rasterio >= 1.3.10',
  'ipywidgets',
  'gsw' # Gibbs seawater package
]


[project.optional-dependencies]
test = [
  'jupyter'
]


[project.urls]
homepage      = 'https://github.com/themachinethatgoesping'
repository    = 'https://github.com/themachinethatgoesping'
documentation = 'https://themachinethatgoesping.readthedocs.io/en/latest/'
#changelog = 'https://constellations.example.com/orion/docs/changelog.html'


# -- cibuildwheel options ---
[tool.cibuildwheel]
#FUTURE: build against musllinux (there is currently no documentation on this image)
#FUTURE: build for pypy (is not yet supported by mesonpy)
# Skip pypy[pp*] and musllinux (for now)
skip = 'pp* *musllinux*'

# Run at least pytests
test-requires = 'pytest'
test-command  = 'cd {project} && pytest'

[tool.cibuildwheel.linux]
# Install build dependencies
#before-all = './ci_scripts/docker-manylinux_x86_64/manylinux2014-install.sh'
manylinux-x86_64-image = 'ghcr.io/themachinethatgoesping/manylinux_x86_64-dep'

[tool.cibuildwheel.macos]
before-all = 'brew install boost libomp llvm@18'

#FUTURE: add windows build here as well


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "subprojects/tools/python/tests/",
    "subprojects/algorithms/python/tests/",
    "subprojects/gridding/python/tests/",
    "subprojects/navigation/python/tests/",
    "subprojects/echosounders/python/tests/",
    "subprojects/pingprocessing/python/tests/",
]

[tool.meson-python.args]
#dist = []
setup = ["--default-library=static", "-Doptimization=3"]
compile = []
install = ['--tags=runtime,python-runtime'] 
